erDiagram
    USER ||--o{ REGISTRATION : inscrit
    EVENT ||--o{ REGISTRATION : concerne
    REGISTRATION ||--|| TICKET : genere
    ORGANIZER ||--o{ EVENT : organise
    VENUE ||--o{ EVENT : accueille

    USER {
        UUID id
        string email
        string name
        enum role
    }

    ORGANIZER {
        UUID id
        string name
    }

    VENUE {
        UUID id
        string name
        string address
        int capacity
    }

    EVENT {
        UUID id
        string title
        string description
        datetime startAt
        datetime endAt
        int capacity
        enum status
    }

    REGISTRATION {
        UUID id
        enum status
        datetime createdAt
    }

    TICKET {
        UUID id
        decimal price
        datetime purchasedAt
        enum status
    }
